--- a/package.json
+++ b/package.json
@@ -9,7 +9,13 @@
   "devDependencies": {
     "@iconify/vue": "^4.1.0",
     "@nuxt/content": "^2.4.2",
+    "@nuxtjs/color-mode": "^3.2.0",
+    "@nuxtjs/tailwindcss": "^6.3.0",
+    "@tailwindcss/typography": "^0.5.9",
     "nuxt": "^3.1.1",
-    "nuxt-windicss": "^2.6.0"
+    "nuxt-windicss": "^2.6.0",
+    "rehype-katex": "5",
+    "rehype-mathjax": "^4.0.2",
+    "remark-math": "4"
   }
 }
