--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@nuxtjs/robots": "^3.0.0",
     "@nuxtjs/tailwindcss": "^6.3.0",
     "@tailwindcss/typography": "^0.5.9",
+    "@vueuse/core": "^9.12.0",
+    "@vueuse/nuxt": "^9.12.0",
     "nuxt": "^3.1.1",
     "nuxt-simple-sitemap": "^1.0.7",
     "rehype-katex": "5",
