--- a/package.json
+++ b/package.json
@@ -13,11 +13,12 @@
     "@nuxtjs/robots": "^3.0.0",
     "@nuxtjs/tailwindcss": "^6.3.0",
     "@tailwindcss/typography": "^0.5.9",
-    "@vueuse/core": "^9.12.0",
-    "@vueuse/nuxt": "^9.12.0",
+    "firebase": "^9.17.1",
     "nuxt": "^3.1.1",
     "nuxt-simple-sitemap": "^1.0.7",
+    "nuxt-vuefire": "^0.1.5",
     "rehype-katex": "5",
-    "remark-math": "4"
+    "remark-math": "4",
+    "vuefire": "^3.0.1"
   }
 }
