--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "preview": "nuxt preview"
   },
   "devDependencies": {
+    "@dargmuesli/nuxt-cookie-control": "^4.4.0",
     "@iconify/vue": "^4.1.0",
     "@nuxt/content": "^2.4.2",
     "@nuxtjs/color-mode": "^3.2.0",
