--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@iconify/vue": "^4.1.0",
     "@nuxt/content": "^2.4.2",
     "@nuxtjs/color-mode": "^3.2.0",
+    "@nuxtjs/device": "^3.1.0",
     "@nuxtjs/google-adsense": "^2.1.0",
     "@nuxtjs/robots": "^3.0.0",
     "@nuxtjs/tailwindcss": "^6.3.0",
